; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/pvinis/extr_pvinis.c_layer_state_set_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/pvinis/extr_pvinis.c_layer_state_set_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LR_SYMBOL = common dso_local global i32 0, align 4
@LR_SYSCTL = common dso_local global i32 0, align 4
@LR_KBCTL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @layer_state_set_user(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @LR_SYMBOL, align 4
  %6 = load i32, i32* @LR_SYSCTL, align 4
  %7 = load i32, i32* @LR_KBCTL, align 4
  %8 = call i32 @update_tri_layer_state(i32 %4, i32 %5, i32 %6, i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @layer_state_set_user_local(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  ret i32 %11
}

declare dso_local i32 @update_tri_layer_state(i32, i32, i32, i32) #1

declare dso_local i32 @layer_state_set_user_local(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
